# MoNaCo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md  bench.sh  fadecInstrsToTblgenEnum.py  lit.cfg.py
include/AMD64/: AMD64Dialect.h  AMD64Dialect.td  AMD64OpInterfaces.td  AMD64Ops.h  AMD64Ops.td  AMD64TypeInterfaces.td  AMD64Types.h  CMakeLists.txt  EncodeOpInterface.td  InstructionOpInterface.td  Lowerings.td
lib/AMD64/: AMD64Dialect.cpp  AMD64Ops.cpp  CMakeLists.txt
misc/: compareGitRevisions.sh
monaco/: CMakeLists.txt  main.cpp
samples/: .gitignore  cfg.mlir  cfgJumpsBig.mlir  crossReferencingGlobals.maybeFix.c  i1arithmetic.mlir  iselBig.mlir  miniCycleCFG.mlir  miniStruct.c  simple.mlir
src/: CMakeLists.txt  fallback.cpp  fallback.h  isel.cpp  isel.h  main.cpp  regallocEncode.cpp  regallocEncode.h  util.cpp  util.h
tests/: .gitignore  2BstackframeRewrite.mlir  addrOfFunc.c  addrOfFunc.mlir  addrofFunc.c  aggregateGlobal.mlir  blockArgs.mlir  brainfuck.c  cTestsuite33.mlir  cmp.mlir  constantCmp.mlir  dhrystoneWithoutFloats.mlir  euler.mlir  floatAllocaLoadStore.mlir  floatArgsCall.c  fmul.c  fmul.mlir  fpadd.mlir  gepIntIndexing.c  gepPlusPrintf.c  i1ArithAndBlockargs.mlir  i1glob.mlir  indirectCall.mlir  intGlobal.c  intrinsics.mlir  invalid.mlir  iselbig.mlir  iselfull.mlir  miniCycleCFG.mlir  miniStruct.c  miniStruct.mlir  mixedArgsStack.c  phiCyclesChains.mlir  printTo10.mlir  ptrGlobal.c  ptrPtrPtr.mlir  ret.mlir  rpo.mlir  rpo1.mlir  rpo2.mlir  (+15 more)
